[package]
name = "rustytweet"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "^0.11.9", features = ["blocking", "json"] }
http = { version = "^0.2.6" }
serde = { version = "^1.0.*", features = ["derive"] }
